--- a/compose.yml
+++ b/compose.yml
@@ -41,6 +41,7 @@ services:
 
   rust:
     image: rust:1-slim
+    command: ["tail", "-f", "/dev/null"]
     working_dir: /aoc
     volumes:
       - ./:/aoc
