day 12.1 in ruby and some other cleanup

--- a/compose.yml
+++ b/compose.yml
@@ -36,7 +36,7 @@ services:
     build:
       context: .
       dockerfile: ruby.Dockerfile
-    command: sleep infinity
+    command: ["tail", "-f", "/dev/null"]
     working_dir: /aoc
     volumes:
       - ./:/aoc
